[tool.poetry]
name = "reddit-topic-modeler"
version = "0.1.0"
description = ""
authors = ["Joe Gambino <joe@gam.bingo>"]

[tool.poetry.dependencies]
python = "3.7.12"
bertopic = "^0.11.0"
streamlit = "^1.11.1"

[tool.poetry.dev-dependencies]
watchdog = "^2.1.9"
jupyter = "^1.0.0"
jupyterlab = "^3.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
